release app writes manifests to git
